--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "firebase": "^9.21.0",
     "sass": "^1.62.1",
     "sass-loader": "^13.2.2",
     "vue": "^2.6.14",
